--- a/styles/main.css
+++ b/styles/main.css
@@ -164,14 +164,14 @@ sup {
 }
 
 a {
-    color: #ea9090;
+    color: #f58a77;
     text-decoration: none;
     background-color: transparent;
     -webkit-text-decoration-skip: objects;
 }
 
 a:hover {
-    color: #ea9090;
+    color: #f04d30;
     text-decoration: underline;
 }
 
@@ -4963,8 +4963,8 @@ tbody.collapse.show {
 
 @media (min-width: 576px) {
     .card-columns {
-        -webkit-column-count: 2;
-        column-count: 2;
+        -webkit-column-count: 3;
+        column-count: 3;
         -webkit-column-gap: 1.25rem;
         column-gap: 1.25rem;
     }
@@ -4977,8 +4977,8 @@ tbody.collapse.show {
 
 @media (min-width: 576px) {
     .gift-columns {
-        -webkit-column-count: 2;
-        column-count: 2;
+        -webkit-column-count: 6;
+        column-count: 6;
         -webkit-column-gap: 1.25rem;
         column-gap: 1.25rem;
     }
@@ -9756,7 +9756,7 @@ body {
 
 /* Home Page Style */
 .ww-home-page {
-    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../images/main-background.png") no-repeat center center;
+    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../images/main-background.jpeg") no-repeat center center;
     background-size: cover;
     background-position: 50%;
     height: 100vh;
@@ -9922,8 +9922,8 @@ body {
 
 @media (max-width: 992px) {
     .ww-gift-section .gift-columns {
-        -webkit-column-count: 2;
-        column-count: 2;
+        -webkit-column-count: 3;
+        column-count: 3;
     }
 }
 
@@ -9936,8 +9936,8 @@ body {
 
 @media (max-width: 576px) {
     .ww-gift-section .gift-columns {
-        -webkit-column-count: 2;
-        column-count: 2;
+        -webkit-column-count: 3;
+        column-count: 3;
     }
 }
 
